--- a/memotest/package.json
+++ b/memotest/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "scripts": {
+        "start": "./vendor/bin/sail up",
         "dev": "vite",
         "build": "vite build"
     },
